--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
       <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+      <link rel="stylesheet" href="node_modules/angular-ui-bootstrap/dist/ui-bootstrap-csp.css">
       <link rel="stylesheet" href="index.css">
       <title>testing-workshop</title>
     </head>
@@ -17,6 +18,8 @@
         <script src="node_modules/angular-sanitize/angular-sanitize.js"></script>
         <script src="node_modules/angular-resource/angular-resource.js"></script>
         <script src="node_modules/angular-route/angular-route.js"></script>
+        <script src="node_modules/angular-ui-bootstrap/dist/ui-bootstrap.js"></script>
+        <script src="node_modules/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js"></script>
         <script src="build/main.bundle.js"></script>
     </body>
 </html>
